--- a/build.gradle
+++ b/build.gradle
@@ -17,10 +17,12 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter:3.1.0'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.4'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'mysql:mysql-connector-java:8.0.33'
     implementation 'org.projectlombok:lombok:1.18.26'
-    implementation 'org.springframework.data:spring-data-jpa:3.1.0'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'org.json:json:20210307'
+    annotationProcessor 'org.projectlombok:lombok'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test:3.1.0'
 }
